Fixed text align

--- a/frontend/src/components/pages/GalleriesNew/Galleries.module.sass
+++ b/frontend/src/components/pages/GalleriesNew/Galleries.module.sass
@@ -13,7 +13,8 @@
   
 .gallery-wrapper
   min-height: 150px
-  
+  text-align: center
+
 .galleries
   flex: 5
   // max-width: 680px
@@ -44,7 +45,9 @@
           display: grid
           grid-template-columns: 1fr 1fr 1fr
           background: $light-grey
+          justify-items: center
           .title-link
+            text-align: center
             display: block
             padding: .4rem
             
